<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>

    <string name="menu_real_estates">Real Estates</string>
    <string name="menu_add">Add</string>
    <string name="menu_details">Details</string>
    <string name="menu_edit">Edit</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="room_count">Room count</string>
    <string name="bathroom_count">Bathroom count</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="zip_code">ZIP Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="creation_date">Creation Date</string>
    <string name="sold_date">Sold Date</string>
    <string name="type">Type :</string>
    <string name="realtor">Realtor :</string>
    <string name="price">Price</string>
    <string name="square_feet">ft²</string>
    <string name="select_image">Select Image</string>
    <string name="error_msg_desc">You need to enter a description</string>
    <string name="cancel">Cancel</string>
    <string name="submit">submit</string>
    <string name="empty">Empty</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="picture">Picture</string>
    <string name="plus">+</string>
    <string name="minus">—</string>
    <string name="lorem_ipsum_1_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at sagittis nunc. Vivamus dapibus purus augue, vel aliquet lorem pretium at. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat, ipsum dapibus euismod dictum, dolor tellus laoreet velit, vel rhoncus dui eros non ante. Donec placerat nibh ut iaculis efficitur. Phasellus sed turpis nulla. In et elementum ante, quis interdum neque. Pellentesque tincidunt consequat lorem at imperdiet. Aliquam ac diam vehicula, suscipit nibh sit amet, euismod libero. Suspendisse potenti. Integer massa lorem, congue quis felis eu, ornare laoreet ligula. Etiam eu leo aliquet, vestibulum purus eu, viverra neque. Etiam et finibus turpis. Pellentesque in interdum nunc, quis lobortis risus. In hac habitasse platea dictumst.</string>
    <string name="media">Media</string>
    <string name="location">Location</string>
    <string name="postal_code">Postal Code</string>
    <string name="euro_sign">€</string>
    <string name="squared_meter">m²</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="country_state">Country/State</string>
    <string name="select_sold_date">Select sold date</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="date_range">Date Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="minimum_photos">Minimum photos</string>
    <string name="sold">Sold</string>
    <string name="published">"Published : "</string>
    <string name="sold_">"Sold : "</string>
    <string name="feet_squared">"ft² : "</string>
    <string name="map">map</string>
    <string name="photo">photo</string>
    <string name="status">Status</string>
    <string name="advanced_search">Advanced search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="zero">0</string>
    <string name="loan_simulator">Loan simulator</string>
    <string name="amount_needed">Amount needed</string>
    <string name="duration_in_years">Duration in years</string>
    <string name="taux_d_interet">Taux d\'intérêt</string>
    <string name="launch_simulation">Launch simulation</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_a_picture_btn">Add a picture action</string>
</resources>