<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photo_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"/>
    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <Spinner
        android:id="@+id/spinner_realtor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>
    <EditText
        android:id="@+id/edit_price"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/price"
        android:hint="@string/price" />

    <EditText
        android:id="@+id/edit_surface"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/square_feet"
        android:hint="@string/square_feet" />

    <EditText
        android:id="@+id/edit_room_count"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/room_count"
        android:hint="@string/room_count" />

    <EditText
        android:id="@+id/edit_bathroom_count"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/bathroom_count"
        android:hint="@string/bathroom_count" />

    <EditText
        android:id="@+id/edit_description"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/description"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/edit_address"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/address"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/edit_postal_code"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/zip_code"
        android:hint="@string/zip_code" />

    <EditText
        android:id="@+id/edit_city"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/city"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/edit_state"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="@string/state"
        android:hint="@string/state" />

    <EditText
        android:id="@+id/edit_sold_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="date"
        android:autofillHints="@string/sold_date"
        android:hint="@string/sold_date" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_point_of_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>