<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">
    <ImageView
        android:id="@+id/show_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/picture"
        tools:src="@drawable/ic_launcher"
        />
    <ImageButton
        android:id="@+id/image_button_remove"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_delete_24"
        android:contentDescription="@string/photo"
        app:layout_constraintTop_toTopOf="@id/show_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/show_imageView"
        android:background="@color/light_grey"
        >
        <TextView
            android:id="@+id/img_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/description"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>