<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/realtor" />
            <Spinner
                android:id="@+id/spinner_realtor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />
            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1">
                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:inputType="numberSigned"
                    tools:text="500000"
                    android:autofillHints="@string/price"
                    android:hint="@string/price" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
            android:id="@+id/textview_price_in_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="€" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:errorEnabled="true"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1" >
                <EditText
                    android:id="@+id/edit_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    tools:text="700"
                    android:autofillHints="@string/square_feet"
                    android:hint="@string/square_feet"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textview_surface_in_m2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="m²" />

            <TextView
                android:id="@+id/textview_room_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/room_count"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1">
                <Button
                    android:id="@+id/button_decrement_room_count"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus" />
                <TextView
                    android:id="@+id/editText_room_count"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_count"
                    android:focusable="false"
                    android:gravity="center_horizontal"/>
                <Button
                    android:id="@+id/button_increment_room_count"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus" />
            </LinearLayout>
            <TextView
                android:id="@+id/textview_bathroom_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bathroom_count"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1">
                <Button
                    android:id="@+id/button_decrement_bathroom_count"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="-" />
                <TextView
                    android:id="@+id/editText_bathroom_count"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bathroom_count"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:gravity="center_horizontal"/>


                <Button
                    android:id="@+id/button_increment_bathroom_count"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="+" />
            </LinearLayout>
        </GridLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:gravity="start|top"
                android:autofillHints="@string/description"
                android:inputType="textMultiLine"
                android:hint="@string/description"
                android:lines="10"
                tools:text="Description"
                android:textAlignment="gravity" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:errorEnabled="true">
            <AutoCompleteTextView
                android:id="@+id/autocomplete_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/address" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_point_of_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

    </LinearLayout>
</ScrollView>